# kalshi_football

./: .gitignore  README.md  SUMMARY.txt
backend/: .env.example  .gitignore  .rebuild_trigger  README.md  analyze_kelly_realistic.py  analyze_kelly_scaling.py  analyze_scaling.py  backtest_cfb_10_18.py  backtest_cfb_10_18_ladder.py  build_2025_nfl_schedule_csv.py  build_cfb_master_schedule.py  config.yaml  debug_cfb_orderbook.py  debug_market_data.py  discover_cfb_markets.py  discover_cfb_simple.py  fetch_cfb_schedule_2025.py  get_fills_10_18.py  list_all_series.py  live_trader.py  live_trader_fixed.py  live_trading_config.yaml  log_manual_trade.py  logs.1760568161629.json  match_cfb_schedule.py  match_cfb_with_cfbd.py  merge_cfb_matched.py  merge_cfb_schedule.py  merge_schedule.py  merge_schedule_v2.py  prepare_cfb_backtest.py  pyproject.toml  reconcile_positions.py  requirements.txt  requirements_trading.txt  run_backtest_final.py  run_backtest_with_schedule.py  sample_cfb_events.py  supabase_logger.py  test_checkpoint_system.py  (+10 more)
backend/artifacts/: cfb_2025_schedule_master.csv  cfb_markets_2025_enriched.csv  cfb_markets_past_enriched.csv  nfl_markets_2025_enriched.csv
backend/docs/: COMMANDS.txt  Favorites.txt  LIVE_TRADING_SUMMARY.txt
backend/migrations/: 001_add_checkpoint_columns.sql  002_add_market_ticks_table.sql  003_add_orders_table.sql  README.md  SEED_orders_dummy_data.sql
backend/railway_logs/: logs.1760568384342.json  logs.1760569113402.json  logs.1760727703162.json  logs.1760816618356.json
backend/tests/: __init__.py  test_fills_costs.py  (+3 more)
(+30 files in other folders)
